# event-listener-primitives

./: Cargo.toml  changelog.md  readme.md
src/: handler_id.rs  lib.rs  once.rs  regular.rs
tests/: once.rs  regular.rs
